feat: refactor auth routes and update swagger documentation
- Update schema references from `router.loginBody` and `router.loginResponseBody` to `auth.LoginBody` and `auth.LoginResponseBody` respectively in `docs/docs.go`, `docs/swagger.json`, and `docs/swagger.yaml`
- Remove `router.loginBody` and `router.loginResponseBody` definitions and add `auth.LoginBody` and `auth.LoginResponseBody` definitions in `docs/docs.go`, `docs/swagger.json`, and `docs/swagger.yaml`
- Add `auth.LoginBody` and `auth.LoginResponseBody` definitions in `docs/swagger.yaml`
- Add a call to `AddV1UserRoutes` function in `internal/app/app.go`
- Rename `internal/controller/http/router/auth.go` to `internal/controller/http/auth/auth.go` and make several changes including moving `loginBody` and `loginResponseBody` types to `auth` package
- Add new file `internal/controller/http/auth/entity.go` to define `LoginBody` and `LoginResponseBody` types
- Make several changes in `internal/controller/http/router/router.go` including replacing `newAuthMiddleware` with `auth.NewAuthMiddleware` and adding `AddV1UserRoutes` function
- Adjust parameters of `buyOddStock` function in `internal/controller/http/v1/trade.go`
- Add new file `internal/controller/http/v1/user.go` to handle user routes
- Modify the `scripts/generate_swagger.sh` script for generating swagger documentation.
